# truecrack

debian/: changelog  control  copyright  rules  truecrack.docs  truecrack.manpages  watch
debian/patches/: add-missing-flags.patch  fix-spelling-error.patch  fix-website.patch  series
src/: Makefile.am  Makefile.in
src/Main/: Core.c  Core.h
